# Easyquant

./: .gitignore  CLAUDE.md  CMakeLists.txt  backtest.sh  compile.sh  sync.sh
.claude/: settings.wechat-eq.json  settings.wechat-tk.json
.claude/agents/: _template.system.md  eq.system.md  manifest.json  tk.system.md  wechat-reply.md
config/: BalanceAllocation.yml  Setting.yml  backtest_config.json  mock2_config.json  mock_config.json  pair_configs.yml  prod_config.json  taking_all_multi.json
docs/: architecture.md  config.md  data-engine.md  fill-probability-model.md  fp-design.md  known-issues.md  trading-engine.md
docs/fill-model/: 01-framework.md  02-parameterization.md  03-validation.md  04-implementation.md  README.md
docs/fp/: README.md  current-state.md  eval-backtest-guide.md  forex-fp-design.md  fp-evaluation.md  ob-drift-table.md
ext/NovaBase/: CMakeLists.txt  FINAL_COMPLETION_SUMMARY.md  NVWS_COMPLETION_REPORT.md  NVWS_UPDATED_COMPLETION_REPORT.md  build_nvws.sh
ext/NovaBase/build_example/: CMakeCache.txt  Makefile  cmake_install.cmake
ext/NovaBase/build_example/src/: Makefile  cmake_install.cmake
ext/NovaBase/build_example/src/nvws/: Makefile  cmake_install.cmake
ext/NovaBase/build_nvws/: CMakeCache.txt
ext/NovaBase/build_ws_manual/: example_binance_client
ext/NovaBase/cmake/: common.cmake
ext/NovaBase/include/base/: base_aes.h  base_async_log.h  base_base64.h  base_bigint.h  base_block_object_pool.h  base_common.h  base_condition_var.h  base_config.h  base_config_util.h  base_error.h  base_exception.h  base_freelist.h  base_hash.h  base_hash_table.h  base_log.h  base_memory.h  base_memory_pool.h  base_module.h  base_net.h  base_os_io.h  base_os_machine_info.h  base_os_socket.h  base_os_string.h  base_os_thread.h  base_os_time.h  base_recv_manager.h  base_server.h  base_service.h  base_spinlock.h  base_spsc_queue.h  base_trie.h  base_type.h  base_util.h  csv.h  nova_base.h  picojson.h  scope_profile.h
ext/NovaBase/include/tpl/fmt/: format-inl.h  printf.h
ext/NovaBase/include/tpl/fmt.bak/: format.h
ext/NovaBase/include/tpl/nvws/: ws_struct.h  ws_thread_pool.h  ws_util.h  ws_web_client.h  ws_web_server.h  ws_websocket_client.h  ws_websocket_server.h
ext/NovaBase/src/: CMakeLists.txt
ext/NovaBase/src/nvws/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  example_binance_client.cpp  example_client.cpp  example_kraken_client.cpp  example_nova_quote_bridge.cpp  example_rest_client.cpp  example_rest_server.cpp  example_server.cpp  ws_thread_pool.cpp  ws_util.cpp  ws_web_client.cpp  ws_web_server.cpp  ws_websocket_client.cpp  ws_websocket_server.cpp
ext/NovaCoin2/include/api/: nova_api_config.h  nova_api_config.h.in  nova_api_currency.h  nova_api_currency_list.h  nova_api_data_type.h  nova_api_datainfo.h  nova_api_exch.h  nova_api_exch_list.h  nova_api_inst_type.h  nova_api_inst_type_list.h  nova_api_instrument.h  nova_api_instrument_abbr_list.h  nova_api_quote_struct.h  nova_api_struct.h  nova_api_trade_position.h  nova_api_trade_struct.h  nova_api_util.h  nova_trader_api.h
ext/NovaCoin2/include/quote/: quote_data_type.h  quote_engine.h  quote_queue_mgr.h  quote_rest.h  quote_server.h  (+2 more)
ext/coinsimulator/: CMakeLists.txt  coinrunner_log.h  main.cpp  strategy_runner.cpp  strategy_runner.h
ext/coinsimulator/config/: config_reloader.cpp  config_watcher.cpp
ext/coinsimulator/feed/: backtest_feed.cpp  backtest_feed.h  feed_engine.h  mmap_backtest_feed.cpp  mmap_backtest_feed.h  ws_feed.cpp  ws_feed.h
ext/coinsimulator/mock/: backtest_trade_engine.cpp  backtest_trade_engine.h  exch_trade_engines.cpp  exch_trade_engines.h  full_stubs.cpp  kraken_trade_engine.cpp  kraken_trade_engine.h  mock_server.cpp  mock_server.h  mock_trade_engine.cpp  mock_trade_engine.h  mock_trade_service.cpp  mock_trade_service.h  rest_trade_engine.cpp  rest_trade_engine.h  strategy_api_impl.cpp
ext/mexc_proto/: PrivateAccountV3Api.pb.cc  PrivateAccountV3Api.pb.h  PrivateDealsV3Api.pb.cc  PrivateDealsV3Api.pb.h  PrivateOrdersV3Api.pb.cc  PrivateOrdersV3Api.pb.h  PublicAggreBookTickerV3Api.pb.cc  PublicAggreBookTickerV3Api.pb.h  PublicAggreDealsV3Api.pb.cc  PublicAggreDealsV3Api.pb.h  PublicAggreDepthsV3Api.pb.cc  PublicAggreDepthsV3Api.pb.h  PublicBookTickerBatchV3Api.pb.cc  PublicBookTickerBatchV3Api.pb.h  PublicBookTickerV3Api.pb.cc  PublicBookTickerV3Api.pb.h  PublicDealsV3Api.pb.cc  PublicDealsV3Api.pb.h  PublicIncreaseDepthsBatchV3Api.pb.cc  PublicIncreaseDepthsBatchV3Api.pb.h  PublicIncreaseDepthsV3Api.pb.cc  PublicIncreaseDepthsV3Api.pb.h  PublicLimitDepthsV3Api.pb.cc  PublicLimitDepthsV3Api.pb.h  PublicMiniTickerV3Api.pb.cc  PublicMiniTickerV3Api.pb.h  PublicMiniTickersV3Api.pb.cc  PublicMiniTickersV3Api.pb.h  PublicSpotKlineV3Api.pb.cc  PublicSpotKlineV3Api.pb.h  PushDataV3ApiWrapper.pb.cc  PushDataV3ApiWrapper.pb.h
include/: circular_buffer.h  config_reloader.h  config_watcher.h  constant.h  data_process.h  digital_fp_calculator.h  fair_price_generator.h  markout.h  order_processor.h  record.h  taking_all_multi.h
include/common/: data.h  data_currency.h  data_currency_pair.h  data_exchange.h  data_instrument.h  data_status.h  drift_table.h  rapidcsv.h  scheduler.h  symbol_mapping.h  turnover_pairs.h  volume_pairs.h
include/common/fmt/: core.h  format.h
include/configs/: base_config.h  config_struct.h  configs.h  pair_configs.h  stable_config.h  strategy_config.h
include/util_tools/: calculate_util.h  container_util.h  file_util.h  str_util.h  sum_util.h  time_util.h
python/: analyze_stability.py  batch_markout.py  batch_validate.py  convert_parquet_to_bin.py  drift_table.py  fetch_base_info.py  fill_hazard_analysis.py  fit_tail_model.py  markout_eval.py  validate_ranking.py
scripts/: analyze_backtest_gaps.py  analyze_turnover_rate.py  restart-wechat-agent.sh  restart-wechat-eq.sh  start-wechat-agent-screen.sh  start-wechat-agent.sh
scripts/hooks/: wechat-send-footer.py
strategy/: CMakeLists.txt  coinbase_volume.py  data_process.cpp  digital_fp_calculator.cpp  fair_price_generator.cpp  taking_all_multi.cpp  volume_pairs.cpp
(+14 files in other folders)
